# Faith-Language

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: simple.ft
grammar/: Faith.bnf  grammar.bnf
include/: FaithAST.h  FaithParser.h  FileRead.h  Lexer.h  Logger.h  Parser.h
src/: FaithParser.cpp  Lexer.cpp  Logger.cpp  main.cpp
